# Reiki_Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/Modules/: googletest-download.cmake  googletest.cmake
libs/GLAD/: glad.c
libs/GLAD/glad/: glad.h
src/: CMakeLists.txt  Reiki.hpp  Window.cpp  Window.hpp  main.cpp  project_path.hpp.in
src/core/: Core.hpp  GameEngine.cpp  GameEngine.hpp  GameState.hpp  Window.cpp  Window.hpp
src/ecs/: Component.hpp  ECS.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
src/graphics/: FrameBuffer.cpp  FrameBuffer.hpp  Graphics.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderable.cpp  Renderable.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp  Texture.cpp  Texture.hpp  TexturedVertex.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexAttribute.cpp  VertexAttribute.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp  graphics.hpp
src/math/: mat3.cpp  mat3.hpp  math.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
src/shaders/: test.fs.glsl  test.vs.glsl  test_framebuffer.fs.glsl  test_framebuffer.vs.glsl  test_textured.fs.glsl  test_textured.vs.glsl
src/utils/: FileUtils.hpp
test/: CMakeLists.txt  exampleTest.cpp  main.cpp
test/math/: mat3Test.cpp  vec2Test.cpp  vec3Test.cpp  vec4Test.cpp
